--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,10 +15,7 @@
           <p><em>Disabled Veteran Owned</em></p>
         </div>
         <div class="footer-link">
-          <p><em>Division of Global Technology Services</em></p>
-        </div>
-        <div class="footer-link">
-          <p><em>Non-profit 501-C3</em></p>
+          <p><em>Division of Global Technology Services, LLC</em></p>
         </div>
       </div>
       <div class="col-lg-3 mb-5 mb-lg-0">
