--- a/src/app/store/product-details/product-details.component.html
+++ b/src/app/store/product-details/product-details.component.html
@@ -1,5 +1,5 @@
 <!-- Product Detail -->
-<div class="bgwhite p-t-35 p-b-80">
+<div class="bgwhite p-t-35">
   <div class="flex-w flex-sb">
     <div class="card text-left p-0">
       <img class="card-img-top" src="{{ product.imgUrl }}" alt="" />
