--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,204 +1,84 @@
-<section class="pt-5 mt-5">
-  <div class="p-4"></div>
+<section class="pt-5 mt-5 pb-4">
+  <div class="p-4 text-center"><h1>Checkout</h1></div>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 order-md-2 mb-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-muted">Your cart</span>
-          <span class="badge badge-secondary badge-pill">3</span>
-        </h4>
-        <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Product name</h6>
-              <small class="text-muted">Brief description</small>
+      <div class="col-md-6 order-md-1">
+        <h4 class="mb-1">Shipping address</h4>
+        <div class="form-check">
+          <input class="form-check-input" id="useShippingAddress" type="checkbox" [(ngModel)]="newShippingAddress" value="true">
+          <label class="form-check-label" for="useShippingAddress">Don't use Billing Address</label>
+        </div>
+        <div class="slideInDown animate default" id="collapseShippingAddress" [ngbCollapse]="!newShippingAddress">
+          <form name="shippingAddress" class="needs-validation">
+            <p class="text-muted mb-3">(<b class="text-danger">*</b>) Indicates a Required Field</p>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName">First name(<b class="text-danger">*</b>)</label>
+                <input [(ngModel)]="shippingTo.given_name" type="text" class="form-control" id="firstName" name="first" placeholder="Last" required>
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName">Last name(<b class="text-danger">*</b>)</label>
+                <input [(ngModel)]="shippingTo.surname" type="text" class="form-control" name="last" id="lastName" placeholder="" required>
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
             </div>
-            <span class="text-muted">$12</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Second product</h6>
-              <small class="text-muted">Brief description</small>
+  
+  
+            <div class="mb-3">
+              <label for="email">Email <span class="text-muted">(Optional)</span></label>
+              <input [(ngModel)]="shippingTo.email" type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
             </div>
-            <span class="text-muted">$8</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Third item</h6>
-              <small class="text-muted">Brief description</small>
+  
+            <div class="mb-3">
+              <label for="address">Address(<b class="text-danger">*</b>)</label>
+              <input [(ngModel)]="shippingAddress.address.address_line_1" type="text" class="form-control" id="address" name="street" placeholder="1234 Main St" required>
+              <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div>
             </div>
-            <span class="text-muted">$5</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between bg-light">
-            <div class="text-success">
-              <h6 class="my-0">Promo code</h6>
-              <small>EXAMPLECODE</small>
+  
+            <div class="mb-3">
+              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+              <input [(ngModel)]="shippingAddress.address.address_line_2" type="text" class="form-control" id="address2" name="aptOrNumber" placeholder="Apartment or suite">
             </div>
-            <span class="text-success">-$5</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Total (USD)</span>
-            <strong>$20</strong>
-          </li>
-        </ul>
-
-        <form class="card p-2">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code">
-            <div class="input-group-append">
-              <button type="submit" class="btn btn-secondary">Redeem</button>
+            <div class="mb-3">
+              <label for="city">City(<b class="text-danger">*</b>)</label>
+                <input [(ngModel)]="shippingAddress.address.admin_area_2" type="text" class="form-control" placeholder="City" name="city" id="city" required>
             </div>
-          </div>
-        </form>
+            <div class="mb-3">
+              <label for="state">State(<b class="text-danger">*</b>)</label>
+                <select class="form-control" [(ngModel)]="shippingAddress.address.admin_area_1"  name="state" id="state" required>
+                  <option *ngFor="let state of states" [value]="state.abbreviation">{{state.name}}</option>
+                </select>
+            </div>
+            <div class="mb-3">
+              <label for="city">Zipcode(<b class="text-danger">*</b>)</label>
+                <input [(ngModel)]="shippingAddress.address.postal_code" type="text" max="5" class="form-control" placeholder="City or Province" name="zipcode" id="cityzipcode" required>
+            </div>
+            <hr>
+            <button class="btn btn-primary" (click)="addShippingAddress(shippingAddress, shippingTo)">Save</button>
+          </form>
+          
+        </div>
       </div>
-      <div class="col-md-8 order-md-1">
-        <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate>
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <label for="firstName">First name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="lastName">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="username">Username</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text">@</span>
-              </div>
-              <input type="text" class="form-control" id="username" placeholder="Username" required>
-              <div class="invalid-feedback" style="width: 100%;">
-                Your username is required.
-              </div>
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="email">Email <span class="text-muted">(Optional)</span></label>
-            <input type="email" class="form-control" id="email" placeholder="you@example.com">
-            <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-            <div class="invalid-feedback">
-              Please enter your shipping address.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-          </div>
-
-          <div class="row">
-            <div class="col-md-5 mb-3">
-              <label for="country">Country</label>
-              <select class="custom-select d-block w-100" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
-              </select>
-              <div class="invalid-feedback">
-                Please select a valid country.
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <label for="state">State</label>
-              <select class="custom-select d-block w-100" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
-              </select>
-              <div class="invalid-feedback">
-                Please provide a valid state.
-              </div>
-            </div>
-            <div class="col-md-3 mb-3">
-              <label for="zip">Zip</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
-              <div class="invalid-feedback">
-                Zip code required.
-              </div>
-            </div>
-          </div>
-          <hr class="mb-4">
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="same-address">
-            <label class="custom-control-label" for="same-address">Shipping address is the same as my billing
-              address</label>
-          </div>
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="save-info">
-            <label class="custom-control-label" for="save-info">Save this information for next time</label>
-          </div>
-          <hr class="mb-4">
-
-          <h4 class="mb-3">Payment</h4>
-
-          <div class="d-block my-3">
-            <div class="custom-control custom-radio">
-              <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-              <label class="custom-control-label" for="credit">Credit card</label>
-            </div>
-            <div class="custom-control custom-radio">
-              <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-              <label class="custom-control-label" for="debit">Debit card</label>
-            </div>
-            <div class="custom-control custom-radio">
-              <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-              <label class="custom-control-label" for="paypal">Paypal</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <label for="cc-name">Name on card</label>
-              <input type="text" class="form-control" id="cc-name" placeholder="" required>
-              <small class="text-muted">Full name as displayed on card</small>
-              <div class="invalid-feedback">
-                Name on card is required
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="cc-number">Credit card number</label>
-              <input type="text" class="form-control" id="cc-number" placeholder="" required>
-              <div class="invalid-feedback">
-                Credit card number is required
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3 mb-3">
-              <label for="cc-expiration">Expiration</label>
-              <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-              <div class="invalid-feedback">
-                Expiration date required
-              </div>
-            </div>
-            <div class="col-md-3 mb-3">
-              <label for="cc-expiration">CVV</label>
-              <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-              <div class="invalid-feedback">
-                Security code required
-              </div>
-            </div>
-          </div>
-          <hr class="mb-4">
-          <button class="btn btn-primary">Confirm Purchase</button>
-        </form>
+      <div class="col-md-6 order-md-2">
+        <app-user-cart #userCart [isCheckout]="true"></app-user-cart>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 m-auto" *ngIf="cart?.items?.length">
+        <hr>
+        <h4 class="mb-3">Payment</h4>
+        <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+      </div>  
     </div>
   </div>
 </section>
