--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <!-- Hero Section-->
 <!-- TODO: Hero Slider ??? -->
-<section #hero class="hero home-page" ngxAnimatedGradient [colors]="colors()"
+<section #hero class="hero home-page bg-gradient-primary"
 >
   <div
     style="background-image: url(assets/img/hero-bg.png); opacity: .35"
     class="background img-fluid"
   ></div>
-  <div class="container mb-5">
+  <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
         <h1
@@ -161,7 +161,7 @@
         need.<br />
         No fees. No tricks.<br />Period.
       </p>
-      <a href="#" class="btn btn-primary btn-outline-dark">Learn More</a>
+      <button class="btn btn-primary btn-outline-dark" (click)="navigateTo('about')">Learn More</button>
     </div>
     <div class="row">
       <div class="card col-lg-4 col-md-12 mt-5 card animate" data-aos="fade-up">
@@ -185,9 +185,7 @@
           <h4 class="card-title">Peace of Mind</h4>
           <p class="card-text">
             Get direct contact with a 911 dispatcher.<br />
-            No call centers.<br />
-            No transfering calls.<br />
-            No wasting precious time.
+            Avoid wasting precious time.
           </p>
         </div>
       </div>
