--- a/src/app/shared/payment-methods/payment-methods.component.html
+++ b/src/app/shared/payment-methods/payment-methods.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div *ngIf="!methods[0]">
-      <h3 class="text-black-50">You Must Add A Payment Method. You'll be unable to purchase anything from MedTelPlus
+      <h3 class="text-black-50">You Must Add A Payment Method. Required to purchase from MedTelPlus
       </h3>
     </div>
     
