--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,13 +2,13 @@
 <section #section class="bgwhite" id="storeSection">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-3 col-lg-3">
+      <div class="col-sm-12 col-md-4 col-lg-3">
         <div
           class="card leftbar border-0"
           data-aos="page-nav-sticky"
           data-aos-offset="1100"
         >
-          <div class="card-header bg-transparent">
+          <div class="card-header border-top bg-transparent">
             <h4 class="card-title pt-0">
               Categories
             </h4>
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="col-sm-12 col-md-8 col-lg-9 p-b-50">
+      <div class="col-sm-12 col-md-8 col-lg-9 p-b-4">
         <!--  -->
         <!-- <div class="flex-sb-m flex-w p-b-35">
 						<div class="flex-w">
@@ -89,12 +89,10 @@
 
         <!-- Products Component -->
         <app-product-list
-          [userCart]="user?.cart"
+          [userCart]="cart"
           [productList]="productList"
-          [loggedIn]="loggedIn | async"
           (productSelected)="productSelected($event, product)"
           (addedToCart)="addToCart($event)"
-          (addedToWishList)="addToWishList($event, user.wishList)"
         ></app-product-list>
       </div>
     </div>
@@ -123,7 +121,6 @@
   </div>
   <div class="modal-footer">
     <button
-      [disabled]="!(loggedIn | async)"
       (click)="addToCart(selectedProduct.productId)"
       type="button"
       class="btn btn-primary"
