--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,8 +12,8 @@
 
 $secondary: #3F5E7F;
 $primary: #007bff;
-
-
+$primary-gradient: linear-gradient(90deg,
+  rgb(90, 123, 255), rgb(0, 123, 255));
 
 /*
 * =====================================================
@@ -46,6 +46,22 @@ section {
 
   ul li {
     cursor: pointer !important;
+  }
+}
+
+.list-group {
+  .list-group-item {
+    transition: all .3s ease-out;
+
+    &.nav-item {
+      background-color: transparent !important;
+    }
+
+    &:not(.nav-item).active2,
+    &:not(.nav-item):hover {
+      border-left: .25rem solid $primary !important;
+      color: $secondary;
+    }
   }
 }
 
@@ -176,7 +192,7 @@ button {
 */
 .hero {
   overflow-x: hidden;
-  padding: 8.5rem 0;
+  padding-top: 8.5rem;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -195,29 +211,18 @@ button {
     color: $white;
   }
 
-  @media all and (min-width: 1200px) {
-    background-size: 100%;
-
-    .background {
-      background-size: 110%;
-    }
-  }
+  @media all and (min-width: 1200px) {}
 }
 
 .background {
   position: absolute;
   top: 4rem;
   opacity: .75;
-  padding: 8.5rem 0;
   background-repeat: no-repeat;
-  // background-size: cover;
-  width: 100%;
-  height: 100vh;
-
-
-  @media all and (max-width: 760px) {
-    background-position: center;
-  }
+  width: 100vw;
+  height: calc(100vh - 4rem);
+  background-size: cover;
+  background-position: center;
 }
 
 .downArrow {
@@ -600,9 +605,9 @@ button {
   height: 30px;
   border-radius: 50%;
   position: absolute;
-  top: 150px;
+  top: 230px;
   padding: 0;
-  left: 90px;
+  left: 70px;
 }
 
 .btn {
@@ -1548,6 +1553,10 @@ button.bg-primary:focus {
   background-color: #de1d39 !important;
 }
 
+.bg-gradient-primary {
+  background-image: $primary-gradient;
+}
+
 .bg-secondary {
   background-color: $secondary !important;
 }
@@ -1829,7 +1838,7 @@ a.text-dark:focus {
   * 6. FORMS
   */
 .form-control {
-  padding: 0.75rem 1.6rem;
+  // padding: 0.75rem 1.6rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
@@ -2285,13 +2294,13 @@ code {
 }
 
 .card>.list-group:first-child .list-group-item:first-child {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
 }
 
 .card>.list-group:last-child .list-group-item:last-child {
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
 }
 
 .card-body {
@@ -2427,6 +2436,20 @@ code {
 .dropdown-item.disabled,
 .dropdown-item:disabled {
   color: $secondary;
+}
+
+.list-group .list-group-item {
+  cursor: pointer;
+}
+
+.list-group:first-child .list-group-item:first-child {
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+}
+
+.list-group:last-child .list-group-item:last-child {
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
 }
 
 #storeSection,
@@ -3934,12 +3957,21 @@ code {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 22px;
+    width: 60px;
+    height: 28px;
     border-radius: 11px;
     position: absolute;
-    top: 12px;
+    top: 4px;
     left: 12px;
+    transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -webkit-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+
+
+    @media all and (max-width: 760px) {
+      top: 58px;
+    }
   }
 
   .block2-labelsale::before {
@@ -3965,94 +3997,138 @@ code {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0);
-    opacity: 1;
+    opacity: 0;
 
-    @media all and (min-width: 760px) {
-      background-color: rgba(0, 0, 0, 0.3);
-      opacity: 0;
+    @media all and (max-width: 760px) {
+      // background-color: rgba(0, 0, 0, 0.3);
+      opacity: 1;
     }
+
   }
 
   /* ------------------------------------ */
   .block2-btn-addcart {
     position: absolute;
     left: 50%;
+    background-image: $primary-gradient;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    bottom: -45px;
-    transition: all .35s ease-out;
-    -webkit-transition: all .35s ease-out;
-    -moz-transition: all .35s ease-out;
+    bottom: -15%;
+    transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -webkit-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
 
     @media all and (max-width: 760px) {
-      bottom: 18%;
+      bottom: 15%;
+
     }
 
   }
 
   /* ------------------------------------ */
-  .block2-btn-towishlist,
-  .block2-btn-addwishlist {
+  // .block2-btn-towishlist,
+  // .block2-btn-addwishlist {
+  //   display: block;
+  //   position: absolute;
+  //   top: 4px;
+  //   z-index: 1000;
+  //   right: 12px;
+  //   font-size: 1.2rem;
+  //   color: white;
+  //   line-height: 0;
+  //   transition: all .35s ease-out;
+
+
+  //   @media all and (max-width: 760px) {
+  //     -webkit-transform: scale(1);
+  //     -moz-transform: scale(1);
+  //     -ms-transform: scale(1);
+  //     -o-transform: scale(1);
+  //     transform: scale(1);
+  //   }
+
+  //   -webkit-transform: scale(0);
+  //   -moz-transform: scale(0);
+  //   -ms-transform: scale(0);
+  //   -o-transform: scale(0);
+  //   transform: scale(0);
+  // }
+
+  .block2-caption {
     display: block;
+    width: 100%;
+    background-image: $primary-gradient;
+    height: 0;
+    z-index: 999;
     position: absolute;
-    top: 14px;
-    right: 20px;
-    font-size: 20px;
+    top: 0;
+    font-size: 1rem;
     color: white;
+    padding: 1rem;
     line-height: 0;
+    transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -webkit-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
 
     @media all and (max-width: 760px) {
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1);
+      height: 72px;
+      top: 0;
     }
 
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
   }
 
-  .block2-btn-addwishlist:hover {
-    color: white;
-  }
+  // .block2-btn-addwishlist:hover {
+  //   color: #FFFFFF;
+  // }
 
-  .block2-btn-addwishlist .icon-wishlist,
-  .block2-btn-towishlist .icon-wishlist {
-    line-height: 0;
-  }
+  // .block2-btn-addwishlist .icon-wishlist,
+  // .block2-btn-towishlist .icon-wishlist {
+  //   line-height: 0;
+  // }
 
-  .block2-btn-addwishlist:hover .icon_heart_alt {
-    display: none;
-  }
+  // .block2-btn-addwishlist:hover .icon_heart_alt {
+  //   display: none;
+  // }
 
-  .block2-btn-addwishlist:hover .icon_heart {
-    display: block;
-  }
+  // .block2-btn-addwishlist:hover .icon_heart {
+  //   display: block;
+  // }
 
   /* ------------------------------------ */
-  .block2-btn-towishlist .icon_heart_alt {
-    display: none;
-  }
+  // .block2-btn-towishlist .icon_heart_alt {
+  //   display: none;
+  // }
 
-  .block2-btn-towishlist .icon_heart {
-    display: block;
-    color: $primary;
-  }
+  // .block2-btn-towishlist .icon_heart {
+  //   display: block;
+  //   color: $secondary;
+  // }
 
   /* ------------------------------------ */
   .block2-overlay:hover {
     opacity: 1;
   }
 
+  .block2-img:hover.block2-labelsale::before,
+  .block2-img:hover.block2-labelsoldout::before,
+  .block2-img:hover.block2-labelnew::before {
+    top: 58px;
+  }
+
   .block2-overlay:hover .block2-btn-addcart {
-    bottom: 18%;
+    bottom: 20%;
+  }
+
+  .block2-overlay:hover .block2-caption {
+    top: 0;
+    height: 72px;
+    padding: 2rem auto 0 auto;
+    ;
   }
 
   .block2-overlay:hover .block2-btn-addwishlist,
@@ -15647,6 +15723,10 @@ EFFECT   EFFECT   EFFECT   EFFECT   EFFECT   EFFECT  EFFECT
 */
   .active1 {
     color: #333333;
+  }
+
+  .active2 {
+    border-left: 1rem solid $primary !important;
   }
 
 
